<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fangzuo.assist.Activity.PushDownMTActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_top"
            android:background="@color/cpb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fhtzd_xt_dbd"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>
            <ImageView
                android:id="@+id/iv_scan"
                android:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@mipmap/scan"
                android:layout_width="35dp"
                android:layout_height="35dp" />


        </RelativeLayout>
        <ListView
            android:id="@+id/lv_pushsub"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/line_heng"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/out_storage"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                    <include layout="@layout/line_shu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/out_wavehouse"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                </LinearLayout>

                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/sp_storageout"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"/>
                    <include layout="@layout/line_shu"/>
                    <com.fangzuo.assist.widget.MyWaveHouseSpinner
                        android:id="@+id/sp_wavehouseout"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"/>
                </LinearLayout>
                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in_storage"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                    <include layout="@layout/line_shu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in_wavehouse"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                </LinearLayout>

                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/sp_storagein"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"/>
                    <include layout="@layout/line_shu"/>
                    <Spinner
                        android:id="@+id/sp_wavehousein"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <include layout="@layout/line_heng"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                    <include layout="@layout/line_shu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unit"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                </LinearLayout>

                <include layout="@layout/line_heng"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:background="@drawable/tv_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>
                    <include layout="@layout/line_shu"/>
                    <Spinner
                        android:id="@+id/sp_unit"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pihao"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                    <include layout="@layout/line_shu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/num"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:gravity="center"/>
                </LinearLayout>

                <include layout="@layout/line_heng"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <EditText
                        android:visibility="gone"
                        android:background="@android:drawable/edit_text"
                        android:id="@+id/ed_batchNo"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1" />
                    <com.fangzuo.assist.widget.SpinnerPici
                        android:id="@+id/sp_batchNo"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1" />

                    <include layout="@layout/line_shu"/>
                    <EditText
                        android:id="@+id/ed_num"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext_selector"
                        android:textSize="15sp"
                        android:singleLine="true"
                        android:gravity="center"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/store"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <include layout="@layout/line_shu"/>
                    <TextView
                        android:visibility="invisible"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/beizhu"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />



                </LinearLayout>
                <include layout="@layout/line_heng"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_kucun"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:background="@drawable/tv_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"/>
                    <include layout="@layout/line_shu"/>
                    <EditText
                        android:visibility="invisible"
                        android:id="@+id/et_beizhu"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/edit_text"
                        android:singleLine="true"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="35dp">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/add"
                android:background="@drawable/btn_check"/>

            <include layout="@layout/line_shu"/>
            <Button
                android:id="@+id/btn_backorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/push"
                android:background="@drawable/btn_check"/>

            <include layout="@layout/line_shu"/>
            <Button
                android:id="@+id/btn_checkorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_check"
                android:text="@string/review"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="250dp"
        android:tag="LEFT"
        android:layout_gravity ="right"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/white"
            android:layout_width="250dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cb_isStorage"
                android:text="@string/bring_storage"
                android:textSize="15sp"
                android:textColor="@android:color/holo_red_light"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cb_isAuto"
                android:text="@string/auto_add"
                android:textSize="15sp"
                android:textColor="@android:color/holo_red_light"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/date"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.fangzuo.assist.widget.SpinnerDepartMent
                    android:id="@+id/sp_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.fangzuo.assist.widget.SpinnerPeople
                    android:id="@+id/sp_employee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_person"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.fangzuo.assist.widget.SpinnerPeople
                    android:id="@+id/sp_sign_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_person"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.fangzuo.assist.widget.SpinnerPeople
                    android:id="@+id/sp_capture_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</android.support.v4.widget.DrawerLayout>
